use ArrayList instead of LinkedList in ScannerImpl